# serializer version: 1
# name: test_brine_density
  array([1005.07007392, 1004.8803875 , 1004.68987043, 1004.49852438,
         1004.30635102, 1004.11335202, 1003.91952906, 1003.72488379,
         1003.52941789, 1003.33313302, 1003.13603084, 1002.938113  ,
         1002.73938117, 1002.53983701, 1002.33948216, 1002.13831828,
         1001.93634702, 1001.73357003, 1001.52998895, 1001.32560543,
         1001.12042111, 1000.91443764, 1000.70765665, 1000.50007979,
         1000.29170867, 1000.08254496,  999.87259026,  999.66184621,
          999.45031445,  999.2379966 ,  999.02489427,  998.81100911,
          998.59634272,  998.38089672,  998.16467274,  997.94767239,
          997.72989728,  997.51134902,  997.29202923,  997.07193951,
          996.85108147,  996.62945672,  996.40706685,  996.18391346,
          995.95999817,  995.73532255,  995.50988822,  995.28369675,
          995.05674975,  994.82904881,  994.6005955 ,  994.37139142,
          994.14143816,  993.91073728,  993.67929039,  993.44709904,
          993.21416483,  992.98048933,  992.7460741 ,  992.51092072,
          992.27503076,  992.0384058 ,  991.80104738,  991.56295708,
          991.32413647,  991.08458709,  990.84431052,  990.6033083 ,
          990.36158199,  990.11913314,  989.87596331,  989.63207405,
          989.38746689,  989.1421434 ,  988.8961051 ,  988.64935356,
          988.40189029,  988.15371685,  987.90483476,  987.65524557,
          987.40495081,  987.15395201,  986.90225069,  986.64984839,
          986.39674662,  986.14294692,  985.88845081,  985.6332598 ,
          985.37737541,  985.12079916,  984.86353257,  984.60557715,
          984.3469344 ,  984.08760584,  983.82759297,  983.56689731,
          983.30552034,  983.04346358,  982.78072853,  982.51731667,
          982.25322952])
# ---
# name: test_brine_properties
  tuple(
    array([1620.52418102, 1620.64237863, 1620.75573002, 1620.86426028,
         1620.96799432, 1621.06695683, 1621.16117227, 1621.2506649 ,
         1621.33545877, 1621.4155777 , 1621.49104533, 1621.56188507,
         1621.62812013, 1621.6897735 , 1621.74686799, 1621.79942619,
         1621.84747048, 1621.89102305, 1621.9301059 , 1621.96474081,
         1621.99494937, 1622.02075297, 1622.04217281, 1622.05922989,
         1622.07194503, 1622.08033884, 1622.08443175, 1622.08424398,
         1622.0797956 , 1622.07110646, 1622.05819624, 1622.04108441,
         1622.0197903 , 1621.99433303, 1621.96473153, 1621.93100456,
         1621.89317072, 1621.8512484 , 1621.80525583, 1621.75521106,
         1621.70113199, 1621.6430363 , 1621.58094154, 1621.51486507,
         1621.44482409, 1621.37083562, 1621.29291653, 1621.2110835 ,
         1621.12535308, 1621.03574163, 1620.94226536, 1620.84494031,
         1620.74378237, 1620.63880727, 1620.53003059, 1620.41746773,
         1620.30113397, 1620.18104442, 1620.05721402, 1619.9296576 ,
         1619.7983898 , 1619.66342515, 1619.524778  , 1619.38246258,
         1619.23649295, 1619.08688306, 1618.93364668, 1618.77679748,
         1618.61634896, 1618.4523145 , 1618.28470732, 1618.11354055,
         1617.93882713, 1617.7605799 , 1617.57881158, 1617.39353473,
         1617.20476179, 1617.01250508, 1616.81677679, 1616.61758899,
         1616.41495361, 1616.20888247, 1615.99938728, 1615.7864796 ,
         1615.57017089, 1615.3504725 , 1615.12739565, 1614.90095144,
         1614.67115087, 1614.43800482, 1614.20152406, 1613.96171927,
         1613.71860097, 1613.47217963, 1613.22246558, 1612.96946905,
         1612.71320017, 1612.45366898, 1612.19088539, 1611.92485923,
         1611.65560024]),
    array([1005.07007392, 1004.8803875 , 1004.68987043, 1004.49852438,
         1004.30635102, 1004.11335202, 1003.91952906, 1003.72488379,
         1003.52941789, 1003.33313302, 1003.13603084, 1002.938113  ,
         1002.73938117, 1002.53983701, 1002.33948216, 1002.13831828,
         1001.93634702, 1001.73357003, 1001.52998895, 1001.32560543,
         1001.12042111, 1000.91443764, 1000.70765665, 1000.50007979,
         1000.29170867, 1000.08254496,  999.87259026,  999.66184621,
          999.45031445,  999.2379966 ,  999.02489427,  998.81100911,
          998.59634272,  998.38089672,  998.16467274,  997.94767239,
          997.72989728,  997.51134902,  997.29202923,  997.07193951,
          996.85108147,  996.62945672,  996.40706685,  996.18391346,
          995.95999817,  995.73532255,  995.50988822,  995.28369675,
          995.05674975,  994.82904881,  994.6005955 ,  994.37139142,
          994.14143816,  993.91073728,  993.67929039,  993.44709904,
          993.21416483,  992.98048933,  992.7460741 ,  992.51092072,
          992.27503076,  992.0384058 ,  991.80104738,  991.56295708,
          991.32413647,  991.08458709,  990.84431052,  990.6033083 ,
          990.36158199,  990.11913314,  989.87596331,  989.63207405,
          989.38746689,  989.1421434 ,  988.8961051 ,  988.64935356,
          988.40189029,  988.15371685,  987.90483476,  987.65524557,
          987.40495081,  987.15395201,  986.90225069,  986.64984839,
          986.39674662,  986.14294692,  985.88845081,  985.6332598 ,
          985.37737541,  985.12079916,  984.86353257,  984.60557715,
          984.3469344 ,  984.08760584,  983.82759297,  983.56689731,
          983.30552034,  983.04346358,  982.78072853,  982.51731667,
          982.25322952]),
    array([2.63941314e+09, 2.63929997e+09, 2.63916872e+09, 2.63901948e+09,
         2.63885234e+09, 2.63866738e+09, 2.63846471e+09, 2.63824440e+09,
         2.63800655e+09, 2.63775124e+09, 2.63747857e+09, 2.63718861e+09,
         2.63688145e+09, 2.63655718e+09, 2.63621589e+09, 2.63585765e+09,
         2.63548256e+09, 2.63509070e+09, 2.63468214e+09, 2.63425698e+09,
         2.63381530e+09, 2.63335716e+09, 2.63288267e+09, 2.63239189e+09,
         2.63188491e+09, 2.63136181e+09, 2.63082267e+09, 2.63026756e+09,
         2.62969656e+09, 2.62910976e+09, 2.62850722e+09, 2.62788902e+09,
         2.62725525e+09, 2.62660597e+09, 2.62594127e+09, 2.62526121e+09,
         2.62456587e+09, 2.62385532e+09, 2.62312964e+09, 2.62238890e+09,
         2.62163317e+09, 2.62086253e+09, 2.62007704e+09, 2.61927678e+09,
         2.61846182e+09, 2.61763222e+09, 2.61678806e+09, 2.61592940e+09,
         2.61505631e+09, 2.61416887e+09, 2.61326714e+09, 2.61235119e+09,
         2.61142108e+09, 2.61047688e+09, 2.60951865e+09, 2.60854647e+09,
         2.60756040e+09, 2.60656050e+09, 2.60554683e+09, 2.60451946e+09,
         2.60347846e+09, 2.60242388e+09, 2.60135580e+09, 2.60027426e+09,
         2.59917934e+09, 2.59807109e+09, 2.59694958e+09, 2.59581487e+09,
         2.59466701e+09, 2.59350607e+09, 2.59233211e+09, 2.59114518e+09,
         2.58994534e+09, 2.58873266e+09, 2.58750719e+09, 2.58626899e+09,
         2.58501811e+09, 2.58375462e+09, 2.58247856e+09, 2.58119000e+09,
         2.57988899e+09, 2.57857559e+09, 2.57724985e+09, 2.57591183e+09,
         2.57456157e+09, 2.57319915e+09, 2.57182460e+09, 2.57043799e+09,
         2.56903936e+09, 2.56762877e+09, 2.56620628e+09, 2.56477192e+09,
         2.56332577e+09, 2.56186786e+09, 2.56039825e+09, 2.55891699e+09,
         2.55742413e+09, 2.55591972e+09, 2.55440382e+09, 2.55287647e+09,
         2.55133771e+09]),
  )
# ---
# name: test_brine_velocity
  array([1620.52418102, 1620.64237863, 1620.75573002, 1620.86426028,
         1620.96799432, 1621.06695683, 1621.16117227, 1621.2506649 ,
         1621.33545877, 1621.4155777 , 1621.49104533, 1621.56188507,
         1621.62812013, 1621.6897735 , 1621.74686799, 1621.79942619,
         1621.84747048, 1621.89102305, 1621.9301059 , 1621.96474081,
         1621.99494937, 1622.02075297, 1622.04217281, 1622.05922989,
         1622.07194503, 1622.08033884, 1622.08443175, 1622.08424398,
         1622.0797956 , 1622.07110646, 1622.05819624, 1622.04108441,
         1622.0197903 , 1621.99433303, 1621.96473153, 1621.93100456,
         1621.89317072, 1621.8512484 , 1621.80525583, 1621.75521106,
         1621.70113199, 1621.6430363 , 1621.58094154, 1621.51486507,
         1621.44482409, 1621.37083562, 1621.29291653, 1621.2110835 ,
         1621.12535308, 1621.03574163, 1620.94226536, 1620.84494031,
         1620.74378237, 1620.63880727, 1620.53003059, 1620.41746773,
         1620.30113397, 1620.18104442, 1620.05721402, 1619.9296576 ,
         1619.7983898 , 1619.66342515, 1619.524778  , 1619.38246258,
         1619.23649295, 1619.08688306, 1618.93364668, 1618.77679748,
         1618.61634896, 1618.4523145 , 1618.28470732, 1618.11354055,
         1617.93882713, 1617.7605799 , 1617.57881158, 1617.39353473,
         1617.20476179, 1617.01250508, 1616.81677679, 1616.61758899,
         1616.41495361, 1616.20888247, 1615.99938728, 1615.7864796 ,
         1615.57017089, 1615.3504725 , 1615.12739565, 1614.90095144,
         1614.67115087, 1614.43800482, 1614.20152406, 1613.96171927,
         1613.71860097, 1613.47217963, 1613.22246558, 1612.96946905,
         1612.71320017, 1612.45366898, 1612.19088539, 1611.92485923,
         1611.65560024])
# ---
# name: test_water_density
  array([981.02437952, 980.8336225 , 980.64203048, 980.44960513,
         980.25634813, 980.06226113, 979.86734582, 979.67160386,
         979.47503692, 979.27764665, 979.07943472, 978.88040279,
         978.68055252, 978.47988556, 978.27840357, 978.0761082 ,
         977.8730011 , 977.66908391, 977.46435829, 977.25882588,
         977.05248833, 976.84534727, 976.63740434, 976.42866119,
         976.21911944, 976.00878073, 975.7976467 , 975.58571897,
         975.37299917, 975.15948893, 974.94518987, 974.73010362,
         974.51423179, 974.29757602, 974.0801379 , 973.86191907,
         973.64292113, 973.42314569, 973.20259437, 972.98126877,
         972.7591705 , 972.53630116, 972.31266236, 972.0882557 ,
         971.86308278, 971.63714518, 971.41044452, 971.18298238,
         970.95476035, 970.72578003, 970.496043  , 970.26555085,
         970.03430516, 969.80230751, 969.56955949, 969.33606267,
         969.10181864, 968.86682896, 968.63109521, 968.39461897,
         968.15740179, 967.91944525, 967.68075092, 967.44132035,
         967.20115511, 966.96025677, 966.71862688, 966.47626699,
         966.23317866, 965.98936345, 965.74482291, 965.49955858,
         965.25357201, 965.00686475, 964.75943834, 964.51129433,
         964.26243425, 964.01285965, 963.76257205, 963.511573  ,
         963.25986403, 963.00744666, 962.75432243, 962.50049287,
         962.2459595 , 961.99072384, 961.73478742, 961.47815175,
         961.22081836, 960.96278875, 960.70406446, 960.44464697,
         960.18453782, 959.92373851, 959.66225054, 959.40007542,
         959.13721465, 958.87366974, 958.60944218, 958.34453348,
         958.07894512])
# ---
# name: test_water_properties
  tuple(
    array([1591.44368418, 1591.59698478, 1591.74507071, 1591.88796822,
         1592.02570335, 1592.15830194, 1592.28578959, 1592.4081917 ,
         1592.52553347, 1592.63783986, 1592.74513564, 1592.84744537,
         1592.9447934 , 1593.03720388, 1593.12470074, 1593.20730772,
         1593.28504835, 1593.35794596, 1593.42602368, 1593.48930444,
         1593.54781097, 1593.60156582, 1593.65059131, 1593.69490959,
         1593.73454262, 1593.76951216, 1593.79983977, 1593.82554683,
         1593.84665454, 1593.86318389, 1593.87515571, 1593.88259061,
         1593.88550907, 1593.88393133, 1593.87787748, 1593.86736742,
         1593.85242089, 1593.83305743, 1593.8092964 , 1593.78115701,
         1593.74865828, 1593.71181905, 1593.670658  , 1593.62519365,
         1593.57544432, 1593.52142818, 1593.46316325, 1593.40066736,
         1593.33395817, 1593.26305322, 1593.18796983, 1593.10872521,
         1593.02533637, 1592.9378202 , 1592.84619341, 1592.75047256,
         1592.65067404, 1592.54681413, 1592.43890891, 1592.32697434,
         1592.21102622, 1592.0910802 , 1591.96715179, 1591.83925634,
         1591.70740909, 1591.5716251 , 1591.4319193 , 1591.28830649,
         1591.14080133, 1590.98941831, 1590.83417184, 1590.67507614,
         1590.51214533, 1590.34539339, 1590.17483415, 1590.00048135,
         1589.82234855, 1589.64044923, 1589.45479671, 1589.2654042 ,
         1589.07228478, 1588.87545141, 1588.67491694, 1588.47069408,
         1588.26279542, 1588.05123346, 1587.83602056, 1587.61716897,
         1587.39469082, 1587.16859814, 1586.93890285, 1586.70561675,
         1586.46875153, 1586.22831878, 1585.98432998, 1585.73679651,
         1585.48572963, 1585.23114052, 1584.97304025, 1584.71143979,
         1584.44635   ]),
    array([981.02437952, 980.8336225 , 980.64203048, 980.44960513,
         980.25634813, 980.06226113, 979.86734582, 979.67160386,
         979.47503692, 979.27764665, 979.07943472, 978.88040279,
         978.68055252, 978.47988556, 978.27840357, 978.0761082 ,
         977.8730011 , 977.66908391, 977.46435829, 977.25882588,
         977.05248833, 976.84534727, 976.63740434, 976.42866119,
         976.21911944, 976.00878073, 975.7976467 , 975.58571897,
         975.37299917, 975.15948893, 974.94518987, 974.73010362,
         974.51423179, 974.29757602, 974.0801379 , 973.86191907,
         973.64292113, 973.42314569, 973.20259437, 972.98126877,
         972.7591705 , 972.53630116, 972.31266236, 972.0882557 ,
         971.86308278, 971.63714518, 971.41044452, 971.18298238,
         970.95476035, 970.72578003, 970.496043  , 970.26555085,
         970.03430516, 969.80230751, 969.56955949, 969.33606267,
         969.10181864, 968.86682896, 968.63109521, 968.39461897,
         968.15740179, 967.91944525, 967.68075092, 967.44132035,
         967.20115511, 966.96025677, 966.71862688, 966.47626699,
         966.23317866, 965.98936345, 965.74482291, 965.49955858,
         965.25357201, 965.00686475, 964.75943834, 964.51129433,
         964.26243425, 964.01285965, 963.76257205, 963.511573  ,
         963.25986403, 963.00744666, 962.75432243, 962.50049287,
         962.2459595 , 961.99072384, 961.73478742, 961.47815175,
         961.22081836, 960.96278875, 960.70406446, 960.44464697,
         960.18453782, 959.92373851, 959.66225054, 959.40007542,
         959.13721465, 958.87366974, 958.60944218, 958.34453348,
         958.07894512]),
    array([2.48463358e+09, 2.48462906e+09, 2.48460600e+09, 2.48456450e+09,
         2.48450465e+09, 2.48442653e+09, 2.48433023e+09, 2.48421584e+09,
         2.48408344e+09, 2.48393314e+09, 2.48376500e+09, 2.48357912e+09,
         2.48337559e+09, 2.48315449e+09, 2.48291589e+09, 2.48265990e+09,
         2.48238659e+09, 2.48209605e+09, 2.48178835e+09, 2.48146359e+09,
         2.48112184e+09, 2.48076318e+09, 2.48038770e+09, 2.47999548e+09,
         2.47958660e+09, 2.47916113e+09, 2.47871916e+09, 2.47826077e+09,
         2.47778603e+09, 2.47729502e+09, 2.47678782e+09, 2.47626451e+09,
         2.47572516e+09, 2.47516985e+09, 2.47459866e+09, 2.47401166e+09,
         2.47340892e+09, 2.47279053e+09, 2.47215655e+09, 2.47150706e+09,
         2.47084213e+09, 2.47016184e+09, 2.46946625e+09, 2.46875544e+09,
         2.46802948e+09, 2.46728845e+09, 2.46653240e+09, 2.46576142e+09,
         2.46497557e+09, 2.46417493e+09, 2.46335955e+09, 2.46252951e+09,
         2.46168489e+09, 2.46082574e+09, 2.45995213e+09, 2.45906413e+09,
         2.45816181e+09, 2.45724524e+09, 2.45631448e+09, 2.45536959e+09,
         2.45441064e+09, 2.45343769e+09, 2.45245082e+09, 2.45145008e+09,
         2.45043554e+09, 2.44940726e+09, 2.44836530e+09, 2.44730973e+09,
         2.44624061e+09, 2.44515800e+09, 2.44406196e+09, 2.44295255e+09,
         2.44182984e+09, 2.44069389e+09, 2.43954475e+09, 2.43838248e+09,
         2.43720715e+09, 2.43601881e+09, 2.43481752e+09, 2.43360335e+09,
         2.43237635e+09, 2.43113657e+09, 2.42988407e+09, 2.42861892e+09,
         2.42734117e+09, 2.42605087e+09, 2.42474809e+09, 2.42343287e+09,
         2.42210527e+09, 2.42076536e+09, 2.41941318e+09, 2.41804878e+09,
         2.41667224e+09, 2.41528359e+09, 2.41388289e+09, 2.41247019e+09,
         2.41104556e+09, 2.40960904e+09, 2.40816068e+09, 2.40670054e+09,
         2.40522868e+09]),
  )
# ---
# name: test_water_velocity
  array([1591.44368418, 1591.59698478, 1591.74507071, 1591.88796822,
         1592.02570335, 1592.15830194, 1592.28578959, 1592.4081917 ,
         1592.52553347, 1592.63783986, 1592.74513564, 1592.84744537,
         1592.9447934 , 1593.03720388, 1593.12470074, 1593.20730772,
         1593.28504835, 1593.35794596, 1593.42602368, 1593.48930444,
         1593.54781097, 1593.60156582, 1593.65059131, 1593.69490959,
         1593.73454262, 1593.76951216, 1593.79983977, 1593.82554683,
         1593.84665454, 1593.86318389, 1593.87515571, 1593.88259061,
         1593.88550907, 1593.88393133, 1593.87787748, 1593.86736742,
         1593.85242089, 1593.83305743, 1593.8092964 , 1593.78115701,
         1593.74865828, 1593.71181905, 1593.670658  , 1593.62519365,
         1593.57544432, 1593.52142818, 1593.46316325, 1593.40066736,
         1593.33395817, 1593.26305322, 1593.18796983, 1593.10872521,
         1593.02533637, 1592.9378202 , 1592.84619341, 1592.75047256,
         1592.65067404, 1592.54681413, 1592.43890891, 1592.32697434,
         1592.21102622, 1592.0910802 , 1591.96715179, 1591.83925634,
         1591.70740909, 1591.5716251 , 1591.4319193 , 1591.28830649,
         1591.14080133, 1590.98941831, 1590.83417184, 1590.67507614,
         1590.51214533, 1590.34539339, 1590.17483415, 1590.00048135,
         1589.82234855, 1589.64044923, 1589.45479671, 1589.2654042 ,
         1589.07228478, 1588.87545141, 1588.67491694, 1588.47069408,
         1588.26279542, 1588.05123346, 1587.83602056, 1587.61716897,
         1587.39469082, 1587.16859814, 1586.93890285, 1586.70561675,
         1586.46875153, 1586.22831878, 1585.98432998, 1585.73679651,
         1585.48572963, 1585.23114052, 1584.97304025, 1584.71143979,
         1584.44635   ])
# ---
